--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -53,6 +53,7 @@
   ],
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
+    "@types/react-test-renderer": "^17.0.1",
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-image": "^2.1.1",
     "@size-limit/preset-small-lib": "^7.0.8",
@@ -79,7 +80,7 @@
     "vilo"
   ],
   "dependencies": {
-    "@types/react-test-renderer": "^17.0.1"
+
   },
   "jest": {
     "moduleNameMapper": {
